--- a/style.css
+++ b/style.css
@@ -1,31 +1,36 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
+/* Font */
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
+/* Variables */
+/* colors */
+:root {    
+    --color-background: rgb(239, 219, 164);    
+    --color-primary: rgb(5, 139, 68);
+    --color-light: rgb(240, 232, 208);
+    --color-button-hover: rgb(242, 184, 83);
+    --color-button-inactive: #0caf60;
+}
+
+/* Reset */
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Indie Flower', cursive;
 }
 
 body {
+    background-color: var(--color-background);
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='52' height='52' viewBox='0 0 52 52'%3E%3Cpath fill='%23efb208' fill-opacity='0.15' d='M0 17.83V0h17.83a3 3 0 0 1-5.66 2H5.9A5 5 0 0 1 2 5.9v6.27a3 3 0 0 1-2 5.66zm0 18.34a3 3 0 0 1 2 5.66v6.27A5 5 0 0 1 5.9 52h6.27a3 3 0 0 1 5.66 0H0V36.17zM36.17 52a3 3 0 0 1 5.66 0h6.27a5 5 0 0 1 3.9-3.9v-6.27a3 3 0 0 1 0-5.66V52H36.17zM0 31.93v-9.78a5 5 0 0 1 3.8.72l4.43-4.43a3 3 0 1 1 1.42 1.41L5.2 24.28a5 5 0 0 1 0 5.52l4.44 4.43a3 3 0 1 1-1.42 1.42L3.8 31.2a5 5 0 0 1-3.8.72zm52-14.1a3 3 0 0 1 0-5.66V5.9A5 5 0 0 1 48.1 2h-6.27a3 3 0 0 1-5.66-2H52v17.83zm0 14.1a4.97 4.97 0 0 1-1.72-.72l-4.43 4.44a3 3 0 1 1-1.41-1.42l4.43-4.43a5 5 0 0 1 0-5.52l-4.43-4.43a3 3 0 1 1 1.41-1.41l4.43 4.43c.53-.35 1.12-.6 1.72-.72v9.78zM22.15 0h9.78a5 5 0 0 1-.72 3.8l4.44 4.43a3 3 0 1 1-1.42 1.42L29.8 5.2a5 5 0 0 1-5.52 0l-4.43 4.44a3 3 0 1 1-1.41-1.42l4.43-4.43a5 5 0 0 1-.72-3.8zm0 52c.13-.6.37-1.19.72-1.72l-4.43-4.43a3 3 0 1 1 1.41-1.41l4.43 4.43a5 5 0 0 1 5.52 0l4.43-4.43a3 3 0 1 1 1.42 1.41l-4.44 4.43c.36.53.6 1.12.72 1.72h-9.78zm9.75-24a5 5 0 0 1-3.9 3.9v6.27a3 3 0 1 1-2 0V31.9a5 5 0 0 1-3.9-3.9h-6.27a3 3 0 1 1 0-2h6.27a5 5 0 0 1 3.9-3.9v-6.27a3 3 0 1 1 2 0v6.27a5 5 0 0 1 3.9 3.9h6.27a3 3 0 1 1 0 2H31.9z'%3E%3C/path%3E%3C/svg%3E");
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /* color: #fff; */
-    /* background: url("/bg.jpg"); */
-    background-size: cover;
+
   }
 
-  body::after {
-    /* content: "";
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    z-index: -1; */
-  }
+  
 
   .input {
     display: flex;
@@ -45,8 +50,8 @@ body {
     min-width: 300px;
     font-size: 16px;
     padding: 8px 4px;
-    background-color: #6236ff;
-    color: #fff;
+    background-color: var(--color-primary);
+    color: var(--color-light);
   }
   
   .input select:focus {
@@ -67,7 +72,7 @@ body {
     height: 300px;
     border-radius: 50%;
     background-color: transparent;
-    border: 15px solid #f1f1f1;
+    border: 15px solid var(--color-primary);
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   }
   
@@ -75,7 +80,7 @@ body {
     width: 50px;
     height: 50px;
     position: absolute;
-    background-color: #6236ff;
+    background-color: var(--color-primary);
     border-radius: 50%;
     transition: 4s ease all;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
@@ -99,8 +104,8 @@ body {
   button {
     padding: 8px 20px;
     border-radius: 8px;
-    background-color: #6236ff;
-    color: #fff;
+    background-color: var(--color-primary);
+    color: var(--color-light);
     border: none;
     cursor: pointer;
     transition: 0.3s ease all;
@@ -108,11 +113,11 @@ body {
   }
   
   button:hover {
-    background-color: #f1f1f1;
-    color: #6236ff;
+    background-color: var(--color-button-hover);
+    color: var(--color-primary);
   }
   
   .button-inactive {
     pointer-events: none;
-    background-color: #969696;
+    background-color: #0caf60;
   }
