updated btn size and removed svg background img

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 
 body {
     background-color: var(--color-background);
-    background-image: url("data:image/svg+xml,%3Csvg width='12' height='24' viewBox='0 0 12 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%233c1975' fill-opacity='0.04'%3E%3Cpath d='M2 0h2v12H2V0zm1 20c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM9 8c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zm-1 4h2v12H8V12z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");          
+    /* background-image: url("data:image/svg+xml,%3Csvg width='12' height='24' viewBox='0 0 12 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%233c1975' fill-opacity='0.04'%3E%3Cpath d='M2 0h2v12H2V0zm1 20c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zM9 8c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zm-1 4h2v12H8V12z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");           */
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -100,8 +100,9 @@ body {
   }
   
   button {
-    padding: 8px 20px;
+    padding: 10px 150px;
     border-radius: 8px;
+    margin-bottom: 5px;
     background-color: var(--color-primary);
     color: var(--color-text);
     border: none;
